--- a/bilibili-lite/src/live/header.styl
+++ b/bilibili-lite/src/live/header.styl
@@ -6,9 +6,12 @@
   background-color var(--c-background) !important
 
 .user-panel-ctnr .user-panel .content-ctnr .logout-btn:hover
+.link-panel-ctnr .load-more:hover
+.calendar-checkin .checkin-btn:hover
   background-color var(--c-hover) !important
 
-.search-bar-ctnr .search-bar .search-btn
+.link-navbar-ctnr
+.search-bar-ctnr .search-bar input
 .calendar-checkin .title
 .calendar-checkin .calendar-wrapper
 .calendar-checkin .checkin-rewards
@@ -23,19 +26,24 @@
 .info-item-ctnr
   border-color var(--c-border) !important
 
-.load-more
-  margin 25px auto !important
-  padding 0 40px !important
-
-.link-panel-ctnr .load-more .load-more-btn
-  height 30px !important
-
 .user-panel-ctnr .user-panel .content-ctnr .logout-btn
+.link-panel-ctnr .load-more
+.calendar-checkin .checkin-btn
   border-top 1px solid var(--c-border)
   background-color var(--c-background) !important
+  transition all 0.5s ease-in-out !important
 
 .calendar-checkin .calendar-wrapper .calendar .date-ctnr .day-item
   color #bdbdbd !important
 
 .calendar-checkin .calendar-wrapper .calendar .date-ctnr .day-item.checked
   color var(--c-white) !important
+
+.link-navbar
+  box-shadow none !important
+  background-color var(--c-bg-header) !important
+  backdrop-filter blur(5px) !important
+
+.search-bar-ctnr .search-bar
+  border 0 !important
+  background-color var(--c-hover) !important
