--- a/bilibili-lite/src/live/home.styl
+++ b/bilibili-lite/src/live/home.styl
@@ -2,6 +2,8 @@
 .footer-ctnr
 .pendant-ctnr.left-top
 .side-bar-popup-cntr:after
+.area-detail-ctnr .flip-view
+.area-banner
 	display none !important
 
 .text-info-ctnr.body-bg
@@ -45,10 +47,13 @@
 	color var(--c-white) !important
 
 .player-ctnr button
+.search-bar-ctnr .search-bar .search-btn
+.link-panel-ctnr .load-more .load-more-btn
+.attention-live .switch-btn
 	background-color transparent !important
 
 	&::after
-		content none
+		content none !important
 
 .notice-item .notice-btn
 	background-color var(--c-accent) !important
@@ -65,3 +70,7 @@
 	border-color var(--c-border) !important
 	box-shadow none !important
 	background-color var(--c-background) !important
+
+.yzly-content-ctnr .p-absolute
+.hover-panel-wrapper .text-info-ctnr .follow-btn.p-absolute
+	position absolute
