--- a/bilibili-lite/src/live/room.styl
+++ b/bilibili-lite/src/live/room.styl
@@ -1,6 +1,5 @@
 /* 直播播放界面样式 */
 .link-footer-vm
-.link-navbar-ctnr
 .rank-list-ctnr
 .live-room-app .app-content .app-body .player-and-aside-area .aside-area .rank-list-section
 .chat-history-panel
@@ -31,6 +30,7 @@
 .shortcuts-ctnr .shortcut-item:last-child
 .custom-link
 .live-room-app .app-content .app-body .section-block .right-container
+.left-container .flip-view
 	display none !important
 
 .link-navbar .main-ctnr .nav-logo
