--- a/bilibili-lite/src/manga/header.styl
+++ b/bilibili-lite/src/manga/header.styl
@@ -12,6 +12,13 @@
 .manga-navbar-favourite-manga .drop-list
   background-color var(--c-background) !important
 
+.search-bar .search-bar-bg
+.drop-list .more-btn-container:hover
+  background-color var(--c-hover) !important
+
+.search-bar .search-input
+  background-color transparent !important
+
 .manga-navbar
   box-shadow none !important
   background-color var(--c-bg-header) !important
@@ -22,12 +29,6 @@
 
 .search-bar
   padding 0 8px !important
-
-.search-bar .search-bar-bg
-  background-color var(--c-hover) !important
-
-.search-bar .search-input
-  background-color transparent !important
 
 .search-bar .placeholder-list
   height 32px !important
@@ -47,5 +48,9 @@
   background-color var(--c-hover) !important
   color var(--c-text) !important
 
-// .manga-navbar.hide-mode
-//   transform translateY(0) !important
+.user-panel .drop-list .logout-btn-container
+.user-panel-ctnr .user-panel .content-ctnr .logout-btn
+.drop-list .more-btn-container
+  border-top 1px solid var(--c-border)
+  background-color var(--c-background) !important
+  transition all 0.5s ease-in-out !important
