--- a/bilibili-lite/src/manga/home.styl
+++ b/bilibili-lite/src/manga/home.styl
@@ -38,6 +38,8 @@
 .schedule-list .list-header .date-selector .date-item
 .tab-item
 .newbie-awarder .close-button
+.user-panel .drop-list .logout-btn-container .logout-button
+.drop-list .more-btn-container .more-button
   background-color transparent !important
 
   &::after
