--- a/bilibili-lite/src/passport/base.styl
+++ b/bilibili-lite/src/passport/base.styl
@@ -81,3 +81,6 @@
 .form-login .input-box .sns .btn
   background-color var(--c-background) !important
   color var(--c-text) !important
+
+  &::after
+    content none !important
