--- a/bilibili-lite/src/video/base.styl
+++ b/bilibili-lite/src/video/base.styl
@@ -1,4 +1,7 @@
 /* 主体 */
+.video-page-special-card
+	display none
+
 .bili-header-m .nav-menu .up-load .u-link
 	line-height 50px
 
@@ -58,6 +61,8 @@ ul.rate-star li i
 .coin-operated-m .mc-box.on .c-num
 .main-container .review-module .review-list .review-item .review-header .review-star li i.icon-star-full
 ul.rate-star li i.icon-star-full
+.video-info .video-data .argue i
+.video-info .video-data .copyright i
 	color var(--c-accent) !important
 
 .bilibili-player
@@ -141,8 +146,10 @@ ul.rate-star li i.icon-star-full
 
 .video-desc .btn
 .members-info__header .btn
+.bilibili-player-iconfont
+.bilibili-player-video-btn
 	background-color transparent !important
 	color var(--c-title) !important
 
 	&::after
-		content none
+		content none !important
