--- a/bilibili-lite/src/public/button.styl
+++ b/bilibili-lite/src/public/button.styl
@@ -85,6 +85,9 @@ button
   color var(--c-title) !important
   transition all 0.5s ease-in-out
 
+  &::after
+    content none !important
+
   &:hover
     border-color var(--c-accent) !important
     background-color var(--c-hover) !important
