--- a/bilibili-lite/src/public/background.styl
+++ b/bilibili-lite/src/public/background.styl
@@ -22,7 +22,14 @@ em:not(.icon)
 .bangumi-item .left-img .bangumi-tag
 .bb-comment .stick
 .comment-bilibili-fold .stick
-  border 0
+.up-info .u-info .name .live-status
+.h .h-fans-icon .h-fans-text
+.home-user-spec
+.big-label
+.member-list-exclusive-icon
+.security_content .pendant-nav li div.active
+.security_content .face-g-tab li.current
+  border 0 !important
   background-color var(--c-accent) !important
   color var(--c-white) !important
 
@@ -33,6 +40,7 @@ em:not(.icon)
 .timeline-box .timeline-item .item-right p.num a
 .timeline-box .timeline-item .item-right p.num span
 .page-content .left-side .article-list .article-list-holder .article-item .item-holder .article-title-holder .list-mark
+.home-userstatus
   border-color var(--c-border) !important
   background-color var(--c-background) !important
   color var(--c-text) !important
@@ -74,6 +82,7 @@ textarea
 .hover-panel-wrap
 .suggest-wrap
 #article-list-index
+.big-more-item-list
   border-color var(--c-border) !important
   background-color var(--c-background) !important
   color var(--c-text) !important
