--- a/bilibili-lite/src/space/home.styl
+++ b/bilibili-lite/src/space/home.styl
@@ -115,6 +115,11 @@ input[type=text]:focus
   background-color var(--c-accent)
   color var(--c-white)
 
+.h .h-fans-icon .fans-hover-tip
+.h .h-fans-icon .fans-hover-tip:after
+  border-color var(--c-border)
+  background-color var(--c-background)
+
 .h #h-sign:hover
 .h #h-sign:focus
 .list-create
@@ -244,7 +249,7 @@ input[type=text]:focus
   border-radius 50%
   overflow hidden
   background-color var(--c-background)
-  transition all 0.5s ease-in-out
+  transition all 0.3s ease-in-out
 
 #page-index .col-2 .section .user-auth.no-auth .no-auth-title .goto-auth:hover
 #page-index .col-2 .section .user-auth .auth-icon:hover
