--- a/bilibili-lite/src/video/base.styl
+++ b/bilibili-lite/src/video/base.styl
@@ -63,6 +63,7 @@ ul.rate-star li i
 ul.rate-star li i.icon-star-full
 .video-info .video-data .argue i
 .video-info .video-data .copyright i
+.up-info .u-info .name .username.is-vip:hover
 	color var(--c-accent) !important
 
 .bilibili-player
