--- a/bilibili-lite/src/index.styl
+++ b/bilibili-lite/src/index.styl
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           bilibili-lite
 @namespace      tolking-usercss
-@version        1.0.0-alpha.5
+@version        1.0.0-alpha.6
 @description    一个简化的bilibili页面样式，自适应黑暗模式
 @author         tolking <qw13131wang@gmail.com> (https://ououe.com)
 @homepageURL		https://github.com/tolking/usercss/bilibili-lite
@@ -26,6 +26,7 @@
 @import 'video'
 @import 'passport'
 @import 'space'
+@import 'account'
 @import 'live'
 @import 'search'
 @import 'message'
