--- a/bilibili-lite/src/public/button.styl
+++ b/bilibili-lite/src/public/button.styl
@@ -27,6 +27,22 @@ button
 .search-button
 .coin-wrap .coin-sure
 .bili-dialog-bomb .appeal-box .submit .confirm
+.security_content .h-safe-btn
+.security_content .big-member-btn
+.security_content .big-continuity-card-btn
+.security_content .close-btn
+.security_content .pay-left-btn-alone
+.security_content .points-btn
+.security_content .go-movie
+.security_content .user-my-btn .el-button--primary
+.security_content .tool-change-face
+.security_content .invitation-btn
+.security_content .mp-mine-takedown
+.d-outer .d-state-highlight
+.d-outer .medal-uninstall-js
+.module-box .btn-dufault
+.upLoad .btn-mk2.primary
+.upLoad .upButton
   position relative
   border-color var(--c-accent) !important
   background-color var(--c-accent) !important
@@ -47,7 +63,7 @@ button
     right 0
     background-image linear-gradient(70deg, transparent 20%, rgba(255, 255, 255, 0.3), transparent 80%)
     transform translateX(-100%)
-    transition transform 0.5s ease-in-out !important
+    transition transform 0.3s ease-in-out !important
 
   &:hover
     span
@@ -80,10 +96,26 @@ button
 #pgc-navigate-wrap .ep-box .ep-sub .ep-item
 .rightside-article-list-btn
 .bili-dialog-bomb .appeal-box .submit .cancel
+.security_content .home-to-space
+.security_content .home-to-update
+.security_content .h-mp-space
+.security_content .go-secuirty
+.security_content .h-safe-nobtn
+.security_content .big-gift-btn-home
+.security_content .right-more-btn
+.security_content .tool-uninstall-pendant
+.security_content .black-btn
+.security_content .get-coin-more
+.security_content .m-help
+.security_content .face-g-list#my-g-list .face-g-block .my-mp-block .mp-info .btn-white
+.d-outer .d-button
+.module-box .btn-primary
+.module-box .btn-disabled
+.upLoad .upload-btn
   border 1px solid var(--c-border) !important
   background-color var(--c-background) !important
   color var(--c-title) !important
-  transition all 0.5s ease-in-out
+  transition all 0.3s ease-in-out
 
   &::after
     content none !important
