feat: 增加安全中心

--- a/bilibili-lite/src/live/home.styl
+++ b/bilibili-lite/src/live/home.styl
@@ -40,13 +40,11 @@
 	color var(--c-accent) !important
 
 .cover-ctnr .area-name
-.player-ctnr a
-.player-ctnr span
 .aside-item .aside-item-tips
 .ysly-room-ctnr .item .info span
 	color var(--c-white) !important
 
-.player-ctnr button
+.bilibili-live-player button
 .search-bar-ctnr .search-bar .search-btn
 .link-panel-ctnr .load-more .load-more-btn
 .attention-live .switch-btn
