--- a/bilibili-lite/src/passport/base.styl
+++ b/bilibili-lite/src/passport/base.styl
@@ -37,9 +37,10 @@
 .form-login .input-box .item input
 .form-login .input-box .item input.error
 .autocomplete
-  border-color var(--c-border)
-  background-color var(--c-hover)
-  color var(--c-title)
+.select-group .select-title
+  border-color var(--c-border) !important
+  background-color var(--c-hover) !important
+  color var(--c-title) !important
 
 .el-select-dropdown
   border-color var(--c-border)
