--- a/bilibili-lite/src/public/background.styl
+++ b/bilibili-lite/src/public/background.styl
@@ -29,6 +29,9 @@ em:not(.icon)
 .member-list-exclusive-icon
 .security_content .pendant-nav li div.active
 .security_content .face-g-tab li.current
+.hour-rank
+.attention-btn-ctnr .left-part
+.gift-item .corner-mark
   border 0 !important
   background-color var(--c-accent) !important
   color var(--c-white) !important
@@ -41,6 +44,9 @@ em:not(.icon)
 .timeline-box .timeline-item .item-right p.num span
 .page-content .left-side .article-list .article-list-holder .article-item .item-holder .article-title-holder .list-mark
 .home-userstatus
+.live-status-label
+.up-level-icon
+.user-level-icon
   border-color var(--c-border) !important
   background-color var(--c-background) !important
   color var(--c-text) !important
@@ -83,6 +89,10 @@ textarea
 .suggest-wrap
 #article-list-index
 .big-more-item-list
+.common-popup-wrap
+.awarding-panel
+.link-popup-panel
+.chat-history-panel .chat-history-list .chat-item.danmaku-item .hover-panel
   border-color var(--c-border) !important
   background-color var(--c-background) !important
   color var(--c-text) !important
