--- a/bilibili-lite/src/public/button.styl
+++ b/bilibili-lite/src/public/button.styl
@@ -8,9 +8,9 @@ button
 .paging-box-big .current
 .pager .pages .page-item.active button
 .bui-button-blue
+.bilibili-player-ending-panel-box-functions .bilibili-player-upinfo-electric
 .default-btn
 .bi-btn
-.tag-info-pane .tag-footer .btn-left-box>a
 .main-container .ep-list-wrapper .list-wrapper.simple ul .ep-item.cursor
 .main-container .media-info .media-right .media-tool-bar .btn-follow
 .textarea-container .comm-tool .comm-submit
@@ -43,6 +43,9 @@ button
 .module-box .btn-dufault
 .upLoad .btn-mk2.primary
 .upLoad .upButton
+.select-btn
+.btn-box .like
+.gift-package
   position relative
   border-color var(--c-accent) !important
   background-color var(--c-accent) !important
@@ -66,6 +69,8 @@ button
     transition transform 0.3s ease-in-out !important
 
   &:hover
+    color var(--c-white) !important
+
     span
       color var(--c-white) !important
 
@@ -112,6 +117,11 @@ button
 .module-box .btn-primary
 .module-box .btn-disabled
 .upLoad .upload-btn
+.container .nav-container .list-link p a
+.btn-box .liked
+.btn-box .message
+.tag-info-pane .tag-footer .btn-left-box>a
+.gift-panel-switch
   border 1px solid var(--c-border) !important
   background-color var(--c-background) !important
   color var(--c-title) !important
