feat: 增加可自定义颜色

--- a/bilibili-lite/src/home/header.styl
+++ b/bilibili-lite/src/home/header.styl
@@ -6,7 +6,7 @@
 .nav-link-item .link
 .mini-header .nav-user-center .nav-item a
 .mini-header input
-.mini-header .mini-upload
+.international-home .mini-header .mini-upload
 .international-home .mini-header .nav-user-center .user-con .item .name
 	color var(--c-white) !important
 
