--- a/bilibili-lite/src/live/home.styl
+++ b/bilibili-lite/src/live/home.styl
@@ -45,6 +45,7 @@
 	color var(--c-white) !important
 
 .bilibili-live-player button
+.live-player-ctnr button
 .search-bar-ctnr .search-bar .search-btn
 .link-panel-ctnr .load-more .load-more-btn
 .attention-live .switch-btn
