--- a/bilibili-lite/src/live/room.styl
+++ b/bilibili-lite/src/live/room.styl
@@ -7,6 +7,7 @@
 .link-footer-ctnr
 .count-choice .send-btn-animation
 .chat-history-panel .chat-history-list .chat-item.danmaku-item .title-label
+.bottom-actions .left-action
 	display none !important
 
 .link-footer-vm
@@ -23,11 +24,21 @@
 .tab-box .item.active::before
 .guard-desc-box
 .chat-history-panel .chat-history-list .chat-item.welcome-msg .username.vip
+.recharge-stores-ctnr .cntr
+.recharge-stores-ctnr .gold-seed-store
+.recharge-store-box .cntr .store-content
+.gold-seed-store .content
+.recharge-store-box .reward-desc
+.recharge-store-box .cntr .store-content
+.silver-seed-store
+.silver-seed-store .content
 	background-color var(--c-background) !important
 
 .attention-btn-ctnr .right-part
 .guard-store-box .tab-box
 .fans-medal-item .level
+.recharge-stores-ctnr .tab-box
+.sub-tab-box .item.active
 	background-color var(--c-hover) !important
 
 .title-length-limit
@@ -35,6 +46,7 @@
 .gift-info-title
 .tab-box .item .item-cntr
 .fans-medal-item .level
+.recharge-store-box dl.recharge-form dt
 	color var(--c-title) !important
 
 .gift-info-desc
@@ -58,7 +70,11 @@
 .tabs .tab-list .item
 	border-color var(--c-border) !important
 
+.recharge-store-box ul.select-list .item.active
+	border-color var(--c-accent) !important
+
 .content-wrapper
+.user-protocol
 	border 0 !important
 
 .common-popup-wrap.arrow-top::before
@@ -144,7 +160,7 @@
 	background-color var(--c-accent) !important
 	color var(--c-white) !important
 
-.bl-button--primary[data-v-8a4e6ac4]:disabled
+.bl-button--primary:disabled
 	background-color #e9eaec !important
 	color #b4b4b4 !important
 
