--- a/bilibili-lite/src/public/background.styl
+++ b/bilibili-lite/src/public/background.styl
@@ -5,7 +5,7 @@ em:not(.icon)
 .m-header .num
 .bili-header-m .num
 .badge
-.badge.pink
+.ss-badge
 .primary-menu .nav-menu>li .num-wrap span
 .elevator .list-box .item.on
 .elevator .list-box .item:hover
@@ -35,6 +35,9 @@ em:not(.icon)
   border 0 !important
   background-color var(--c-accent) !important
   color var(--c-white) !important
+
+  &:hover
+    color var(--c-white) !important
 
 .gg-icon
 .tag-list li.tag-item
@@ -93,6 +96,8 @@ textarea
 .awarding-panel
 .link-popup-panel
 .chat-history-panel .chat-history-list .chat-item.danmaku-item .hover-panel
+.tool-bar .share-more
+.tool-bar .mobile-more
   border-color var(--c-border) !important
   background-color var(--c-background) !important
   color var(--c-text) !important
