--- a/bilibili-lite/src/public/comment.styl
+++ b/bilibili-lite/src/public/comment.styl
@@ -14,6 +14,8 @@
 .paging-box .current
 .bb-comment .nameplate .nameplate-card .nameplate-text .n-name
 .comment-bilibili-fold .nameplate .nameplate-card .nameplate-text .n-name
+.btn-box .liked span
+.btn-box .liked:hover span
 	color var(--c-title) !important
 
 .bb-comment .comment-header .tabs-order li
