--- a/bilibili-lite/src/public/header.styl
+++ b/bilibili-lite/src/public/header.styl
@@ -36,12 +36,19 @@
 
 .bili-header-m .nav-search .nav-search-btn
 .international-header .nav-search .nav-search-btn
+.mini-header input
 	background-color transparent !important
 
 	&::after
 		content none
 
 /* 个人弹窗 */
+.van-popper-avatar .level-bar
+	background-color var(--c-border) !important
+
+.van-popper-avatar .level-bar .level-progress
+	background-color var(--c-accent) !important
+
 .van-popper-avatar .coins
 .van-popper-avatar .counts
 .van-popper-avatar .links
@@ -215,7 +222,7 @@
 	color var(--c-text) !important
 
 	&::after
-		content: none
+		content none
 
 .bili-header-m .bilibili-suggest
 .dynamic-m .wnd_bottom a
