--- a/bilibili-lite/src/space/home.styl
+++ b/bilibili-lite/src/space/home.styl
@@ -35,6 +35,7 @@
 
 .n .n-data .n-data-k
 .n .n-data .n-data-v
+#page-index .col-1 .section.empty:after
   color var(--c-text) !important
 
 .be-tab-item.is-active span
