--- a/bilibili-lite/src/video/base.styl
+++ b/bilibili-lite/src/video/base.styl
@@ -23,13 +23,14 @@
 .ep-list-wrapper .ep-item.cursor
 .section-ep-wrapper .ep-item.cursor
 .bilibili-player-video-sendbar .bilibili-player-video-inputbar .bilibili-player-video-hint
-	background-color var(--c-hover)
+.bilibili-player .bilibili-player-area .bilibili-player-video-wrap .bilibili-player-volumeHint
+	background-color var(--c-hover) !important
 
 .main-container .media-info .media-right .pub-wrapper .up-info-wrapper .split-line
-	background-color var(--c-border)
+	background-color var(--c-border) !important
 
 .bui-slider .bui-track .bui-bar-wrap .bui-bar
-	background-color var(--c-accent)
+	background-color var(--c-accent) !important
 
 .bilibili-player-video-wrap a
 .bilibili-player-video-wrap div
@@ -45,16 +46,25 @@
 .video-desc .btn span
 .ep-section-module .section-title
 .recommend-list .rec-title
+.up-info .btn-panel .following span
+.main-container .season-list .series-title
 	color var(--c-title) !important
 
 .bilibili-player-video-sendbar .bilibili-player-video-inputbar .bilibili-player-video-hint a span
 .main-container .review-module .review-list .review-item .review-content
 .main-container .review-module .review-list .review-item .pub-time
-ul.rate-star li i
-.video-toolbar .ops>span i
 .video-desc .info
 .video-toolbar .appeal-text
 .player-auxiliary-area .player-auxiliary-filter .player-auxiliary-setting-menu-wrap .player-auxiliary-setting-menu-list
+.player-auxiliary-area .player-auxiliary-danmaku .player-auxiliary-danmaku-function div
+.up-info .u-info .desc
+.mobile-more .video-title
+ul.rate-star li i
+.video-toolbar .ops>span i
+.main-container .tool-bar .coin-info i
+.main-container .tool-bar .share-info i
+.main-container .tool-bar .mobile-info i
+.up-info .u-info .name .message i
 	color var(--c-text) !important
 
 .coin-operated-m .coin-title span
@@ -64,6 +74,17 @@ ul.rate-star li i.icon-star-full
 .video-info .video-data .argue i
 .video-info .video-data .copyright i
 .up-info .u-info .name .username.is-vip:hover
+.ep-list-wrapper .ep-item i
+.section-ep-wrapper .ep-item i
+.main-container .tool-bar .coin-info.active i
+.main-container .tool-bar .coin-info:hover i
+.main-container .tool-bar .share-info:hover>i
+.main-container .tool-bar .mobile-info:hover i
+.share-more .share-btn:hover i
+.video-toolbar .ops>span.on>i
+.video-toolbar .ops>span:hover>i
+.video-toolbar .ops .share .share-pos .box-a .share-down .share-btn:hover i
+.up-info .u-info .name .message:hover i
 	color var(--c-accent) !important
 
 .bilibili-player
@@ -78,12 +99,11 @@ ul.rate-star li i.icon-star-full
 .tag-del-popup
 .tag-report-popup
 .multi-page
-.multi-page .cur-list .module-box li
 .main-container .media-info .media-right .media-tool-bar .bangumi-options .opt-list
 .main-container .ep-list-wrapper
 .ep-section-module
-	border 1px solid var(--c-border)
-	background-color var(--c-background)
+	border 1px solid var(--c-border) !important
+	background-color var(--c-background) !important
 
 .collection-m .title
 .collection-m .content .group-list .add-group .add-btn
@@ -98,7 +118,7 @@ ul.rate-star li i.icon-star-full
 .open-dialog-masker .open-dialog-content .__dialog-header
 .video-toolbar .ops .share .share-pos .box-b
 .bilibili-player-video-sendbar .bilibili-player-video-inputbar .bilibili-player-video-inputbar-wrap
-	border-color var(--c-border)
+	border-color var(--c-border) !important
 
 .video-toolbar .ops .share .share-pos
 .video-toolbar .ops .share .share-pos .share-address ul li input
@@ -106,9 +126,9 @@ ul.rate-star li i.icon-star-full
 .s_tag .ipt
 .main-container .media-info .media-right .media-desc i
 .main-container .pay-bar .vip .btn-pay.active
-	border-color var(--c-border)
+	border-color var(--c-border) !important
 	background-color var(--c-background) !important
-	color var(--c-text)
+	color var(--c-text) !important
 
 .coin-operated-m .mc-box
 	border 0
@@ -154,3 +174,13 @@ ul.rate-star li i.icon-star-full
 
 	&::after
 		content none !important
+
+.main-container .ep-list-wrapper .list-wrapper.simple ul .ep-item.cursor
+	overflow visible !important
+
+ul.rate-star li i
+.video-toolbar .ops>span i
+.main-container .tool-bar .coin-info i
+.main-container .tool-bar .share-info i
+.main-container .tool-bar .mobile-info i
+	transition all 0.3s ease-in-out
